--- a/gateway/tyk.conf
+++ b/gateway/tyk.conf
@@ -29,7 +29,9 @@
         "mongo_db_name": "",
         "mongo_collection": "",
         "purge_delay": -1,
-        "ignored_ips": []
+        "ignored_ips": [],
+        "enable_geo_ip": false,
+        "geo_ip_db_path": "/opt/tyk-gateway/GeoLite2-City.mmdb"
     },
     "health_check": {
         "enable_health_checks": true,
